--- a/Aplicaciones/Academico/templates/cedula.html
+++ b/Aplicaciones/Academico/templates/cedula.html
@@ -20,8 +20,13 @@
 			<div class="row justify-content-center">
 				<div class="col-md-7 col-lg-5">
 					<div class="wrap">
-						<div class="img" style="background-image: url(http://spanish.peopledaily.com.cn/NMediaFile/2020/0422/FOREIGN202004220927000161940770789.jpg);"></div>
+						<img src="{% static 'images/banner.png' %}" alt="">
 						<div class="login-wrap p-4 p-md-5">
+							<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+								<a href="{% url 'interfaz' %}">
+									<button class="btn btn-primary me-md-2" type="button">Volver</button>
+								</a>
+							  </div>
 			      	<div class="d-flex">
 			      		<div class="w-100">
 			      			<h3 class="mb-4">Cédula de Identidad</h3>
