--- a/Aplicaciones/Academico/templates/index.html
+++ b/Aplicaciones/Academico/templates/index.html
@@ -21,7 +21,7 @@
 			<div class="row justify-content-center">
 				<div class="col-md-7 col-lg-5">
 					<div class="wrap">
-						<div class="img" style="background-image: url(http://spanish.peopledaily.com.cn/NMediaFile/2020/0422/FOREIGN202004220927000161940770789.jpg);"></div>
+						<img src="{% static 'images/banner.png' %}" alt="">
 						<div class="login-wrap p-4 p-md-5">
 			      	<div class="d-flex">
 			      		<div class="w-100">
@@ -32,7 +32,7 @@
 							<form action="{% url 'interfaz' %}" class="signin-form">
 			      		<div class="form-group mt-3">
 			      			<input type="text" class="form-control" required>
-			      			<label class="form-control-placeholder" for="username">Usuario</label>
+			      			<label class="form-control-placeholder" for="username">RUT</label>
 			      		</div>
 		            <div class="form-group">
 		              <input id="password-field" type="password" class="form-control" required>
