arreglo de imagenes

--- a/Aplicaciones/Academico/templates/automotriz.html
+++ b/Aplicaciones/Academico/templates/automotriz.html
@@ -20,7 +20,8 @@
 			<div class="row justify-content-center">
 				<div class="col-md-7 col-lg-5">
 					<div class="wrap">
-						<img src="{% static 'images/banner.png' %}" alt="">
+						<img src="{% static 'images/banner.png' %}" class="img-fluid" alt="Responsive image">
+						
 						<div class="login-wrap p-4 p-md-5">
 							<div class="d-grid gap-2 d-md-flex justify-content-md-end">
 								<a href="{% url 'interfaz' %}">
@@ -36,29 +37,29 @@
 					<form action="#" class="signin-form">
 			      		<div class="form-group mt-3">
                             <h4 class="mb-4">Licencia de Conducir</h4>
-                            <div class="img" style="background-image: url(https://www.ceadechile.cl/images/img/blog/tipos-licencias-conducir-chile.jpg);"></div>
+                            <img src="{% static 'images/lic_conducir.jpg' %}" class="img-fluid" alt="Responsive image">
 			      		</div>
 			      		<div class="form-group mt-3">
                             <h4 class="mb-4">Padrón</h4>
-                            <div class="img" style="background-image: url(https://practicatest.cl/static/img/cl/blog/padron-vehicular.jpg);"></div>
+                            <img src="{% static 'images/padron.png' %}" class="img-fluid" alt="Responsive image">
 			      		</div>
 		            <div class="form-group">
                         <div class="form-group mt-3">
                             <h4 class="mb-4">Permiso de Circulación</h4>
-                            <div class="img" style="background-image: url(https://www.patentechile.com/wp-content/uploads/2021/10/saber-si-un-permiso-de-circulacion-es-legal-o-falso.jpg);"></div>
+                            <img src="{% static 'images/circulacion.png' %}" class="img-fluid" alt="Responsive image">
 			      		</div>
 		            </div>
 
                     <div class="form-group">
                         <div class="form-group mt-3">
                             <h4 class="mb-4">Revisión Técnica</h4>
-                            <div class="img" style="background-image: url(https://www.prt.tuv.com/storage/es/static_page/10/certificado-de-revision-tecnica-certificate2.png);"></div>
+                            <img src="{% static 'images/revision.png' %}" class="img-fluid" alt="Responsive image">
 			      		</div>
 		            </div>
                     <div class="form-group">
                         <div class="form-group mt-3">
                             <h4 class="mb-4">SOAP</h4>
-                            <div class="img" style="background-image: url(https://static.retail.autofact.cl/blog/c_url_original.hdn98l5l5599j.jpg);"></div>
+                            <img src="{% static 'images/seguro.png' %}" class="img-fluid" alt="Responsive image">
 			      		</div>
 		            </div>
 		            
