--- a/Aplicaciones/Academico/templates/index.html
+++ b/Aplicaciones/Academico/templates/index.html
@@ -21,7 +21,8 @@
 			<div class="row justify-content-center">
 				<div class="col-md-7 col-lg-5">
 					<div class="wrap">
-						<img src="{% static 'images/banner.png' %}" alt="">
+						<img src="{% static 'images/banner.png' %}" class="img-fluid" alt="Responsive image">
+						
 						<div class="login-wrap p-4 p-md-5">
 			      	<div class="d-flex">
 			      		<div class="w-100">
