--- a/Aplicaciones/Academico/templates/qr.html
+++ b/Aplicaciones/Academico/templates/qr.html
@@ -20,7 +20,8 @@
 			<div class="row justify-content-center">
 				<div class="col-md-7 col-lg-5">
 					<div class="wrap">
-						<img src="{% static 'images/banner.png' %}" alt="">
+						<img src="{% static 'images/banner.png' %}" class="img-fluid" alt="Responsive image">
+						
 						<div class="login-wrap p-4 p-md-5">
 							<div class="d-grid gap-2 d-md-flex justify-content-md-end">
 								<a href="{% url 'interfaz' %}">
@@ -36,7 +37,7 @@
 			      	</div>
 							<form action="#" class="signin-form">
 			      		<div class="form-group mt-3">
-                            <div class="img" style="background-image: url(https://upload.wikimedia.org/wikipedia/commons/d/d7/Commons_QR_code.png);"></div>
+                            <img src="{% static 'images/qr.png' %}" class="img-fluid" alt="Responsive image">
 			      		</div>
 		            <div class="form-group">
 		    
